cmake_minimum_required(VERSION 3.14)
project(cmos_camera_pylon)
set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED)
find_package(PythonLibs 2.7)
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread system)
include_directories(gnuplot-iostream)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -gdwarf-4")
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(/opt/pylon5/include)
include_directories(required_headers)
link_directories(/opt/pylon5/lib64)
add_executable(cmos_camera_pylon main.cpp)
add_executable(pylon_final pylon_cam.cpp)
add_executable(pylon_bin pylon_camera_bin_reference.cpp)
add_executable(mike_experiment_1 mike_experiment-1.cpp)
add_executable(cmos_camera_calib cmos_camera_calib.cpp)
add_executable(breathing_exercise breathing_exercise.cpp)
target_link_libraries(cmos_camera_pylon pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS})
target_link_libraries(pylon_bin pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS})
target_link_libraries(pylon_final pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS})
target_link_libraries(mike_experiment_1 pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS} ${PYTHON_LIBRARIES} boost_iostreams boost_system boost_filesystem)
target_link_libraries(breathing_exercise pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS} ${PYTHON_LIBRARIES} boost_iostreams boost_system boost_filesystem)
target_link_libraries(cmos_camera_calib pylonutility pylonbase GenApi_gcc_v3_1_Basler_pylon GCBase_gcc_v3_1_Basler_pylon ${OpenCV_LIBS} ${PYTHON_LIBRARIES})


